<resources>
    <string name="app_name">myWallet</string>
    <string name="public_key">Public key</string>
    <string name="private_key">Private key</string>
    <string name="connect">Connect</string>
    <string name="wallet">Wallet :</string>
    <string name="_0">0</string>
    <string name="appwidget_text">Wallet</string>
    <string name="add_widget">Add widget</string>
    <string name="random_value">0.00</string>
    <string name="USD">$</string>
    <string name="EUR">€</string>
    <string name="RUB">₽</string>
    <string name="JPY">¥</string>
    <string name="GBP">£</string>
    <string name="CHF">Fr</string>
    <string name="CAD">$</string>
    <string name="BTC">₿</string>
    <string name="currency_name">Currency name</string>
    <string name="currency_name_title">Currency name :</string>
    <string name="currency_id_title">Currency id :</string>
    <string name="currency_id">id</string>
    <string name="currency_value_title">Value :</string>
    <string name="currency_value">--</string>
    <string name="current_balance_title">Current balance :</string>
    <string name="current_balance">Balance :</string>
    <string name="currency_balance">currency balance</string>
    <string name="currency_balance_converted_title">Converted balance :</string>
    <string name="currency_balance_converted">--</string>
    <string name="unit">unit</string>
    <string name="currency_unit">cUnit</string>
    <string name="updated_title">Last update :</string>
    <string name="updated_hour">-- : --</string>
    <string name="total_balance_title">Total balance :</string>
    <string name="default_value_total_wallet">-.--</string>
    <string name="last_update_title">Last update :</string>
    <string name="last_update">--:--</string>
</resources>